# meme-generator

./: .gitignore  README.md  __init__.py  app.py  meme.py  pyproject.toml  requirements.txt
Ingestors/: __init__.py  csv.py  docx.py  ingestor.py  interface.py  pdf.py  text.py
MemeEngine/: __init__.py  engine.py
QuoteEngine/: QuoteModel.py
exceptions/: __init__.py  invalid_file.py
memegenerator/: __init__.py  __main__.py  app.py  meme.py
memegenerator/Ingestors/: Interface.py  __init__.py  csv.py  docx.py  ingestor.py  interface.py  pdf.py  text.py
memegenerator/MemeEngine/: engine.py
memegenerator/MemeGenerator/: __init__.py  generator.py
memegenerator/QuoteEngine/: IngestorInterface.py  QuoteModel.py  __init__.py  quote.py
xpdf/: README  xpdf
