[tool.poetry]
name = "meme-generator"
version = "0.1.0"
description = "A meme generator written in python and served as a command-lin tool and with flask!"
authors = ["Davide Di Criscito <davide.dicriscito@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
