[tool.poetry]
name = "meme-generator"
version = "0.1.0"
description = "A meme generator written in python and served as a command-lin tool and with flask!"
authors = ["Davide Di Criscito <davide.dicriscito@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
